# thermocpuples_raspi

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
src/: data_handler.cpp  data_handler.h  process.cpp  process.h  thermodata_handler.cpp  thermodata_handler.h
